--- a/main/templates/main/pages/index.html
+++ b/main/templates/main/pages/index.html
@@ -1,4 +1,110 @@
 {% extends 'main/layout/base.html' %}
 {% load static %}
 
+{% block meta %}
+    <meta name="title" content="{{ main_page.seo.title }}"/>
+    <meta name="keywords" content="{{ main_page.seo.keywords }}"/>
+    <meta name="description" content="{{ main_page.seo.description }}"/>
+{% endblock %}
+
 {% block main %}active-link{% endblock %}
+
+{% block content %}
+
+    <!--Carousel-->
+    <div class="container-fluid" style="padding: 0; margin-top: 50px">
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="{{ main_page.slide_1.url }}"  class="d-block w-100; img-fluid">
+              <div class="carousel-caption d-none d-md-block">
+                  <div style="margin-bottom: 25%; background: rgba(0, 0, 0, 0.5); border-radius: 15px">
+                      <h5 style="color: white; font-size: 56px; padding: 15px">Управляющая компания</h5>
+                  </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="{{ main_page.slide_2.url }}"  class="d-block w-100; img-fluid">
+              <div class="carousel-caption d-none d-md-block">
+                  <div style="margin-bottom: 25%; background: rgba(0, 0, 0, 0.5); border-radius: 15px">
+                      <h5 style="color: white; font-size: 56px; padding: 15px">Управляющая компания</h5>
+                  </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="{{ main_page.slide_3.url }}"  class="d-block w-100; img-fluid">
+              <div class="carousel-caption d-none d-md-block">
+                  <div style="margin-bottom: 25%; background: rgba(0, 0, 0, 0.5); border-radius: 15px">
+                      <h5 style="color: white; font-size: 56px; padding: 15px">Управляющая компания</h5>
+                  </div>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"  data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Предыдущий</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"  data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Следующий</span>
+          </button>
+        </div>
+    </div>
+    <!--End Carousel-->
+
+
+    <div class="container" style="margin-top: 20px; max-width: 1140px">
+
+        <!--Information-->
+        <div class="row" style="padding-left: 7px; padding-right: 7px">
+            <div class="col-xl-8 col-md-6" style="padding: 20px 10px 5px 5px">
+                <p style="font-size: 26px">Управляющая компания</p>
+                <div class="dropdown-divider" style="margin: 0; padding: 0"></div>
+                <div style="padding-top: 20px">
+                    {% autoescape off %}{{ main_page.text }}{% endautoescape %}
+                </div>
+                <div style="padding-top: 30px">
+                    <a href="{% url 'about_page' %}" class="btn btn-primary">Подробнее</a>
+                    <span style="float: right"><a href="https://play.google.com/store/apps/details?id=com.avadamedia.program.myhouse24&hl=uk"><img src="{% static 'crm/dist/img/googleplay.png' %}"></a> <a href="https://itunes.apple.com/us/app/%D0%BC%D0%BE%D0%B9%D0%B4%D0%BE%D0%BC24/id1308075440?l=ru&ls=1&mt=8"><img src="{% static 'crm/dist/img/appstore.png' %}"></a></span>
+                </div>
+            </div>
+            <div class="col-xl-4 col-md-6" style="padding: 20px 0 5px 10px">
+                <p style="font-size: 26px">Контакты</p>
+                <div class="dropdown-divider" style="margin: 0; padding: 0"></div>
+                <div style="padding-top: 20px">
+                    <p><span><i class="fas fa-user-circle"></i> </span> {{ contact.full_name }}</p>
+                    <p><span><i class="fas fa-compass"></i> </span> {{ contact.location }}</p>
+                    <p><span><i class="fas fa-map-marked-alt"></i> </span> {{ contact.address }}</p>
+                    <p><span><i class="fas fa-phone"></i> </span> <a href="tel:{{ contact.telephone }}" style="text-decoration: none">{{ contact.telephone }}</a></p>
+                    <p><span><i class="fas fa-envelope"></i> </span> <a href="{{ contact.email }}" style="text-decoration: none">{{ contact.email }}</a></p>
+                </div>
+            </div>
+        </div>
+        <!--End Information-->
+
+        <!--Blocks-->
+        <div style="padding: 70px 10px 5px 0">
+            <p style="font-size: 26px">Рядом с нами</p>
+            <div class="dropdown-divider" style="margin: 0; padding: 0"></div>
+            <div class="row" style="margin-top: 10px; margin-bottom: 20px">
+                {% for block in blocks %}
+                    <div class="col-xl-4 col-md-6" style="text-align: -webkit-center; padding-top: 20px">
+                        <div style="border-radius: 4px; border: 1px lightgrey solid">
+                            <div style="padding: 4px; min-height: 510px">
+                                <img src="{% if block.image %}{{ block.image.url }}{% else %}{% static 'crm/dist/img/default' %}{% endif %}" height="210" width="100%">
+                                <p style="font-size: 24px; text-align: left; padding-top: 20px; padding-left: 5px">{{ block.header }}</p>
+                                <p style="text-align: left; padding-left: 5px">{% autoescape off %}{{ block.description }}{% endautoescape %}</p>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
+        <!--End Blocks-->
+    </div>
+{% endblock %}
