--- a/crm/templates/crm/layout/base.html
+++ b/crm/templates/crm/layout/base.html
@@ -147,7 +147,7 @@
           {% endif %}
           {% if user.role.has_owner %}
           <li class="nav-item">
-            <a href="#" class="nav-link {% block owners %}{% endblock %}">
+            <a id="owners" href="{% url 'owners_list' %}" {% block owners %}class="nav-link"{% endblock %}>
               <i class="fas fa-users" style="width: 23px"></i>
               <p style="color: #494949; font-size: 14px; font-weight: 600">
                 Владельцы квартир
@@ -347,7 +347,7 @@
 <!-- My -->
 <script src="{% static 'crm/scripts/tables.js' %}"></script>
 <script>
-    $('#users, #items, #tariffs, #houses').click(clear)
+    $('#users, #items, #tariffs, #houses, #owners').click(clear)
 </script>
 {% block script %}{% endblock %}
 </body>
