--- a/crm/templates/crm/pages/system_settings/users/users_list.html
+++ b/crm/templates/crm/pages/system_settings/users/users_list.html
@@ -74,9 +74,9 @@
                             </td>
                             <td style="padding: 6px 5px 7px 4px; float: right">
                                 <div class="btn-group pull-right">
-                                    <a class="btn btn-default btn-sm" href="#" title="Отправить приглашение" data-toggle="tooltip"><i class="fa fa-reply"></i></a>
+                                    <button data-id="{{ user.id }}" class="btn btn-default btn-sm invite" title="Отправить приглашение" data-toggle="tooltip"><i class="fa fa-reply"></i></button>
                                     <a class="btn btn-default btn-sm" href="{% url 'user_update' pk=user.id %}" title="Редактировать" data-toggle="tooltip"><i class="fa fa-pencil-alt"></i></a>
-                                    <button type="button" class="btn btn-default btn-sm not-allowed" {% if not user.is_superuser %}data-bs-toggle="modal" data-bs-target="#deleteModal-{{ forloop.counter }}" {% else %}style="cursor: not-allowed; opacity: 0.4"{% endif %}><i class="fa fa-trash"></i></button>
+                                    <button title="Удалить пользователя" type="button" class="btn btn-default btn-sm not-allowed" {% if not user.is_superuser %}data-bs-toggle="modal" data-bs-target="#deleteModal-{{ forloop.counter }}" {% else %}style="cursor: not-allowed; opacity: 0.4"{% endif %}><i class="fa fa-trash"></i></button>
                                 </div>
                             </td>
                         </tr>
@@ -104,6 +104,7 @@
                     {% endfor %}
                 </tbody>
             </table>
+            <input type="hidden" value="" name="user_id" id="user_id">
         </form>
     </div>
 {% endblock %}
@@ -111,6 +112,10 @@
 {% block script %}
     <script src="{% static 'crm/scripts/system-settings/users/users_list.js' %}"></script>
     <script>
+        $('.invite').click(function (){
+            $('#user_id').attr('value', $(this).data('id'))
+        })
+
         {% if messages %}
         Swal.fire({
           backdrop: false,
