--- a/crm/templates/crm/pages/apartments/apartments_list.html
+++ b/crm/templates/crm/pages/apartments/apartments_list.html
@@ -3,10 +3,19 @@
 
 {% block style %}
     <style>
-        .sort-name:hover {
+        .sort-number:hover {
             cursor: pointer;
         }
-        .sort-date:hover {
+        .sort-house:hover {
+            cursor: pointer;
+        }
+        .sort-section:hover {
+            cursor: pointer;
+        }
+        .sort-floor:hover {
+            cursor: pointer;
+        }
+        .sort-owner:hover {
             cursor: pointer;
         }
         .hover-li:hover {
@@ -24,7 +33,7 @@
 
 {% block content %}
     <div style="text-align: right; padding-right: 10px; padding-bottom: 10px">
-        <a href="#" class="btn btn-success">Добавить квартиру</a>
+        <a href="{% url 'apartment_create' %}" class="btn btn-success">Добавить квартиру</a>
     </div>
     <div class="my-box" style="min-height: 0">
         <div class="container-fluid">
@@ -35,13 +44,13 @@
                 <table class="table table-hover table-striped table-responsive no-padding" style="color: #333333; font-size: 14px">
                     <thead>
                         <tr>
-                            <th style="width: 7%" class="sort-number"><span style="color: #72afd2" id="sort-number-span">№квартиры </span></th>
+                            <th style="width: 8%" class="sort-number"><span style="color: #72afd2" id="sort-number-span">№квартиры </span></th>
                             <th style="width: 30%" class="sort-house"><span style="color: #72afd2" id="sort-house-span">Дом </span></th>
                             <th style="width: 10%" class="sort-section"><span style="color: #72afd2" id="sort-section-span">Секция </span></th>
                             <th style="width: 10%" class="sort-floor"><span style="color: #72afd2" id="sort-floor-span">Этаж </span></th>
                             <th style="width: 30%" class="sort-owner"><span style="color: #72afd2" id="sort-owner-span">Владелец </span></th>
                             <th style="width: 7%">Остаток(грн)</th>
-                            <th style="width: 6%"></th>
+                            <th style="width: 0%"></th>
                         </tr>
                     </thead>
                     <tbody>
@@ -60,7 +69,7 @@
                                     <option hidden disabled selected value></option>
                                     {% if sections %}
                                         {% for section in sections %}
-                                            <option value="{{ section.id }}">{{ section.name }}</option>
+                                            <option value="{{ section.name }}">{{ section.name }}</option>
                                         {% endfor %}
                                         {% else %}
                                             <option value="" disabled selected hidden >Выберите дом</option>
@@ -72,7 +81,7 @@
                                     <option hidden disabled selected value></option>
                                     {% if floors %}
                                         {% for floor in floors %}
-                                            <option value="{{ floor.id }}">{{ floor.name }}</option>
+                                            <option value="{{ floor.name }}">{{ floor.name }}</option>
                                         {% endfor %}
                                         {% else %}
                                             <option value="" disabled selected hidden >Выберите дом</option>
@@ -83,7 +92,7 @@
                                 <select class="form-select" name="input_owner" id="input_owner">
                                     <option hidden disabled selected value></option>
                                     {% for owner in owners %}
-                                        <option value="{{ owner.id }}">{{ owner.first_name }} {{ owner.last_name }}</option>
+                                        <option value="{{ owner.id }}">{{ owner.last_name }} {{ owner.first_name }} {{ owner.patronymic }} </option>
                                     {% endfor %}
                                 </select>
                             </td>
@@ -98,15 +107,48 @@
                         </tr>
                         {% for apartment in apartments %}
                             <tr>
-                                <td data-href="" class="tr-link">{{ apartment.number }}</td>
-                                <td data-href="" class="tr-link">{% for house in houses %}{% for section in house.sections.all %}{% if section.id == apartment.section.id %}{{ house.name }}{% endif %}{% endfor %}{% endfor %}
-
-
+                                <td data-href="{% url 'apartment_detail' apartment.id %}" class="tr-link">{{ apartment.number }}</td>
+                                <td data-href="{% url 'apartment_detail' apartment.id %}" class="tr-link">{% for house in houses %}{% for section in house.sections.all %}{% if section.id == apartment.section.id %}{{ house.name }}{% endif %}{% endfor %}{% endfor %}
+                                <td data-href="{% url 'apartment_detail' apartment.id %}" class="tr-link">{{ apartment.section.name }}</td>
+                                <td data-href="{% url 'apartment_detail' apartment.id %}" class="tr-link">{{ apartment.floor.name }}</td>
+                                <td data-href="{% url 'apartment_detail' apartment.id %}" class="tr-link">{% if apartment.owner %}{{ apartment.owner.last_name }} {{ apartment.owner.first_name }} {{ apartment.owner.patronymic }}{% else %}(нет владельца){% endif %}</td>
+                                <td data-href="{% url 'apartment_detail' apartment.id %}" class="tr-link">(нет счета)</td>
+                                <td style="padding: 6px 5px 7px 4px; float: right">
+                                    <div class="btn-group pull-right">
+                                        <a class="btn btn-default btn-sm" href="#" title="Редактировать" data-toggle="tooltip"><i class="fa fa-pencil-alt"></i></a>
+                                        <button type="button" class="btn btn-default btn-sm not-allowed" data-bs-toggle="modal" data-bs-target="#deleteModal-{{ forloop.counter }}"><i class="fa fa-trash-alt"></i></button>
+                                    </div>
                                 </td>
                             </tr>
+                            <!-- Modal -->
+                            <div class="modal fade" id="deleteModal-{{ forloop.counter }}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="deleteModalLabel-{{ forloop.counter }}" aria-hidden="true">
+                              <div class="modal-dialog modal-dialog-centered">
+                                <div class="modal-content">
+                                  <div class="modal-header bg-danger">
+                                    <h5 class="modal-title" id="deleteModal1Label-{{ forloop.counter }}">Подтверждение удаления</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                  </div>
+                                  <form method="post" action="{% url 'apartment_delete' apartment.id %}">
+                                      {% csrf_token %}
+                                      <div class="modal-body">
+                                          Вы действительно хотите удалить квартиру <b>№{{ apartment.number }}, {% for house in houses %}{% for section in house.sections.all %}{% if section.id == apartment.section.id %}{{ house.name }}{% endif %}{% endfor %}{% endfor %}</b>?
+                                      </div>
+                                      <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Отмена</button>
+                                        <button type="submit" class="btn btn-danger">Удалить</button>
+                                      </div>
+                                  </form>
+                                </div>
+                              </div>
+                            </div>
                         {% endfor %}
                     </tbody>
                 </table>
+                <input type="hidden" name="filter-number" value="" id="filter-number">
+                <input type="hidden" name="filter-house" value="" id="filter-house">
+                <input type="hidden" name="filter-section" value="" id="filter-section">
+                <input type="hidden" name="filter-floor" value="" id="filter-floor">
+                <input type="hidden" name="filter-owner" value="" id="filter-owner">
             </form>
             <div style="padding-bottom: 15px">
                 <span>Колличество квартир: <b>{{ apartments|length }}</b></span>
@@ -116,7 +158,7 @@
 {% endblock %}
 
 {% block script %}
-    <script src="{% static 'crm/scripts/owners/owners_list.js' %}"></script>
+    <script src="{% static 'crm/scripts/apartments/apartments_list.js' %}"></script>
     <script>
         // Filters
         init_data()
